# bi-obj-alt-routing

./: .clangd  .gitignore  CMakeLists.txt  flake.nix
docs/: note.typ
include/: bi_obj_a_star.hpp  graph_parse.hpp  landmarks.hpp
src/: benchmark.cpp  bi_obj_a_star.cpp  gen_landmarks.cpp  graph_parse.cpp  landmarks.cpp  main.cpp  verify.cpp
